chore: add resolutions to solve vulnerability

--- a/package.json
+++ b/package.json
@@ -59,5 +59,8 @@
     "tsdx": "^0.13.2",
     "tslib": "^2.0.0",
     "typescript": "^3.9.2"
+  },
+  "resolutions": {
+    "**/**/yargs-parser": "^13.1.2"
   }
 }
